# MediaBib

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_date_joined_and_more.py
accounts/templates/accounts/: login.html  password_change.html  setup.html
accounts/tests/: conftest.py  test_auth.py  test_models.py  test_models_methods.py  test_security.py
app/: settings.py  urls.py
config/: admin.py  apps.py  context_processors.py  models.py  urls.py
config/migrations/: 0001_initial.py
config/tests/: test_admin.py  test_context_processors.py  test_context_processors_exceptions.py  test_models.py
dashboard/: apps.py  models.py  tests.py  tests_mixin.py  urls.py  views.py
dashboard/templates/dashboard/: base_dashboard.html  library_admin.html  reader_placeholder.html  superadmin.html
home/: conftest.py  tests.py  urls.py  views.py
home/templates/home/: index.html
home/tests/: test_views.py
libraries/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
libraries/migrations/: 0001_initial.py  0002_alter_library_created_at_alter_library_is_active_and_more.py
libraries/templates/libraries/: library_detail.html  library_form.html  library_list.html  library_update.html
libraries/tests/: test_forms.py  test_models.py  test_views.py  test_views_update.py
scripts/: README.md  ci-local.ps1
skills/: README.md
skills/security-check/scripts/: security-check.ps1  security-check.sh
templates/: base.html
templates/components/: breadcrumbs.html  header.html  sidebar.html
